k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubik
  labels:
    app: kubik
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubik
  template:
    metadata:
      labels:
        app: kubik
    spec:
      containers:
        - name: kubik
          image: tunix70/kubik:0.0.1
          ports:
            - containerPort: 8080
