k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubik
spec:
  selector:
    app: kubik
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
